CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(CpperoMQ-examples)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)

SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})

LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake/Modules)

INCLUDE(InstallRequiredSystemLibraries)

FIND_PACKAGE(SODIUM REQUIRED)
INCLUDE_DIRECTORIES(${SODIUM_INCLUDE_DIR})

FIND_PACKAGE(ZEROMQ REQUIRED)
INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIR})

FIND_PACKAGE(CPPEROMQ REQUIRED)
INCLUDE_DIRECTORIES(${CPPEROMQ_INCLUDE_DIR})

ADD_SUBDIRECTORY(zguide)
ADD_SUBDIRECTORY(extra)
